@@ -2,7 +2,8 @@
 
 	* isis_circuit.c, isis_csm.c, isis_zebra.c: Don't crash during
 	  interface up/down events. I'm not sure whether logic is correct
-	  though. Needs rethink anyway, seems.
+	  though. Needs rethink anyway, seems. Replace if_is_up() with
+	  if_is_operative() and add some more.
 
 2004-12-24 Hasso Tepper <hasso at quagga.net>
 
